--- a/AgriculturePresentation.UI/Views/Team/EditTeam.cshtml
+++ b/AgriculturePresentation.UI/Views/Team/EditTeam.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AgriculturePresentation.Entities.Concrete.Team
 @{
-    ViewData["Title"] = "AddTeam";
+    ViewData["Title"] = "EditTeam";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -8,12 +8,13 @@
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Yeni Takım Arkadaşı Kaydı</h4>
+                <h4 class="card-title">Takım Arkadaşı Bilgi Güncelleme Sayfası</h4>
                 <p class="card-description">
                     Basic form elements
                 </p>
                 <form class="forms-sample">
                     <div class="form-group">
+                        @Html.HiddenFor(x=>x.TeamID)
                         <label for="exampleInputName1">Adı Soyadı</label>
                         <span asp-validation-for="PersonName" class="text-danger"></span>
                         <input type="text" class="form-control" placeholder="ad soyad" asp-for="PersonName">
@@ -51,4 +52,6 @@
     </div>
 
 </form>
+
+
 
