--- a/AgriculturePresentation.UI/Views/Team/Index.cshtml
+++ b/AgriculturePresentation.UI/Views/Team/Index.cshtml
@@ -47,8 +47,9 @@
                         <strong>UYARI!</strong> Lütfen personel girişi yapınız!
                     </div>
                 }
-                <td><a href="/Team/AddTeam" class="btn btn-outline-info">Yeni Personel Girişi</a></td>
             </div>
+            <br />
+            <a href="/Team/AddTeam" class="btn btn-outline-info">Yeni Personel Girişi</a>
         </div>
     </div>
 </div>
