Viewlerin ve managerların tamamlanmasi

--- a/AgriculturePresentation.UI/Views/Team/EditTeam.cshtml
+++ b/AgriculturePresentation.UI/Views/Team/EditTeam.cshtml
@@ -4,15 +4,11 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<form method="post">
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Takım Arkadaşı Bilgi Güncelleme Sayfası</h4>
-                <p class="card-description">
-                    Basic form elements
-                </p>
-                <form class="forms-sample">
+                <form class="forms-sample" method="post">
                     <div class="form-group">
                         @Html.HiddenFor(x=>x.TeamID)
                         <label for="exampleInputName1">Adı Soyadı</label>
@@ -50,8 +46,3 @@
             </div>
         </div>
     </div>
-
-</form>
-
-
-
