--- a/AgriculturePresentation.UI/Views/Image/Index.cshtml
+++ b/AgriculturePresentation.UI/Views/Image/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using AgriculturePresentation.Entities.Concrete
-@model List<Team>
+@model List<Image>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -8,7 +8,7 @@
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Takım Arkadaşlarımızın Listesi</h4>
+            <h4 class="card-title">Görsel Listesi</h4>
             <div class="table-responsive pt-3">
                 @if (Model.Count > 0)
                 {
@@ -16,9 +16,7 @@
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th>ID</th>
-                                <th>Ad</th>
-                                <th>Görev</th>
+                                <th>Başlık</th>
                                 <th>Sil</th>
                                 <th>Düzenle</th>
                             </tr>
@@ -27,12 +25,10 @@
                             @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td class="py-1"><img src="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/images/faces/face1.jpg" alt="image" /></td>
-                                    <td>@item.TeamID</td>
-                                    <td>@item.PersonName</td>
+                                    <td class="py-1"><img src="@item.ImageUrl" alt="image"/></td>
                                     <td>@item.Title</td>
-                                    <td><a href="/Team/DeleteTeam/@item.TeamID" class="btn btn-outline-danger">Sil</a></td>
-                                    <td><a href="/Team/EditTeam/@item.TeamID" class="btn btn-outline-danger">Güncelle</a></td>
+                                    <td><a href="/Image/DeleteImage/@item.ImageID" class="btn btn-outline-danger">Sil</a></td>
+                                    <td><a href="/Image/EditImage/@item.ImageID" class="btn btn-outline-warning">Güncelle</a></td>
                                 </tr>
                             }
                         </tbody>
@@ -41,15 +37,15 @@
                 else
                 {
                     <div class="alert alert-danger">
-                        <strong>UYARI!</strong> Veri tabanınızda Personel bulunamamıştır!
+                        <strong>UYARI!</strong> Veri tabanınızda Resim bulunamamıştır!
                     </div>
                     <div class="alert alert-warning">
-                        <strong>UYARI!</strong> Lütfen personel girişi yapınız!
+                        <strong>UYARI!</strong> Lütfen resim eklemesi yapınız!
                     </div>
                 }
             </div>
             <br />
-            <a href="/Team/AddTeam" class="btn btn-outline-info">Yeni Personel Girişi</a>
+            <a href="/Image/AddImage" class="btn btn-outline-info">Yeni Resim Girişi</a>
         </div>
     </div>
 </div>
