--- a/AgriculturePresentation.UI/Views/Team/AddTeam.cshtml
+++ b/AgriculturePresentation.UI/Views/Team/AddTeam.cshtml
@@ -4,51 +4,45 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<form method="post">
-    <div class="col-12 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Yeni Takım Arkadaşı Kaydı</h4>
-                <p class="card-description">
-                    Basic form elements
-                </p>
-                <form class="forms-sample">
-                    <div class="form-group">
-                        <label for="exampleInputName1">Adı Soyadı</label>
-                        <span asp-validation-for="PersonName" class="text-danger"></span>
-                        <input type="text" class="form-control" placeholder="ad soyad" asp-for="PersonName">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputName1">Görev</label>
-                        <span asp-validation-for="Title" class="text-danger"></span>
-                        <input type="text" class="form-control" placeholder="görev" asp-for="Title">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputName1">Görsel Yolu</label>
-                        <span asp-validation-for="ImageUrl" class="text-danger"></span>
-                        <input type="text" class="form-control" placeholder="görsel yolu" asp-for="ImageUrl">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputName1">Facebook</label>
-                        <input type="text" class="form-control" placeholder="facebook linkini giriniz" asp-for="FacebookUrl">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputName1">Instagram</label>
-                        <input type="text" class="form-control" placeholder="instagram linkini giriniz" asp-for="InstagramUrl">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputName1">Twitter</label>
-                        <input type="text" class="form-control" placeholder="twitter linkini giriniz" asp-for="TwitterUrl">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputName1">Web Sitesi</label>
-                        <input type="text" class="form-control" placeholder="website linkini giriniz" asp-for="WebsiteUrl">
-                    </div>
-                    <button class="btn btn-outline-info">Kaydet</button>
-                </form>
-            </div>
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Yeni Takım Arkadaşı Kaydı</h4>
+            <form class="forms-sample" method="post">
+                <div class="form-group">
+                    <label for="exampleInputName1">Adı Soyadı</label>
+                    <span asp-validation-for="PersonName" class="text-danger"></span>
+                    <input type="text" class="form-control" placeholder="ad soyad" asp-for="PersonName">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputName1">Görev</label>
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <input type="text" class="form-control" placeholder="görev" asp-for="Title">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputName1">Görsel Yolu</label>
+                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                    <input type="text" class="form-control" placeholder="görsel yolu" asp-for="ImageUrl">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputName1">Facebook</label>
+                    <input type="text" class="form-control" placeholder="facebook linkini giriniz" asp-for="FacebookUrl">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputName1">Instagram</label>
+                    <input type="text" class="form-control" placeholder="instagram linkini giriniz" asp-for="InstagramUrl">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputName1">Twitter</label>
+                    <input type="text" class="form-control" placeholder="twitter linkini giriniz" asp-for="TwitterUrl">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputName1">Web Sitesi</label>
+                    <input type="text" class="form-control" placeholder="website linkini giriniz" asp-for="WebsiteUrl">
+                </div>
+                <button class="btn btn-outline-info">Kaydet</button>
+            </form>
         </div>
     </div>
-
-</form>
+</div>
 
