Proje Finali. Yine değiştirmeler olucak.

--- a/AgriculturePresentation.UI/Views/Team/AddTeam.cshtml
+++ b/AgriculturePresentation.UI/Views/Team/AddTeam.cshtml
@@ -40,7 +40,7 @@
                     <label for="exampleInputName1">Web Sitesi</label>
                     <input type="text" class="form-control" placeholder="website linkini giriniz" asp-for="WebsiteUrl">
                 </div>
-                <button class="btn btn-outline-info">Kaydet</button>
+                <button class="btn btn-outline-info">Ekle</button>
             </form>
         </div>
     </div>
